--- a/Public/CSS/sass/partials/_addTeste.scss
+++ b/Public/CSS/sass/partials/_addTeste.scss
@@ -39,7 +39,7 @@
       input[type="url"] {
         width: 100%;
         font-family: "museo-sans", sans-serif;
-        height: 3rem;
+        height: 4rem;
         padding: 0.5rem;
         font-size: 1.6rem;
         border: 1px solid #8692a6;
@@ -75,7 +75,7 @@
         align-items: center;
         justify-content: center;
         width: 17.5rem;
-        height: 3.5rem;
+        // height: 3.5rem;
         font-size: 1.6rem;
         color: white;
         background-color: $azul;
