--- a/Views/login.hbs
+++ b/Views/login.hbs
@@ -15,12 +15,12 @@
     {{!-- skip links --}}
     <ul class="skip-links">
 
-        <li><a href="#conteudo">Pular para conteúdo</a></li>
+        <li><a href="#conteudo">Pular para login</a></li>
         <li><a href="#rodape">Pular para rodapé</a></li>
 
     </ul>
     {{!-- / skip links --}}
-
+  <div id="conta">
     <header id="logoLogin">
         <a href="/">
             <img src="/Imagens/logo-ally.svg" alt="Logo do Ally">
