--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -244,7 +244,7 @@ main.semTestes {
     display: flex;
     justify-content: center;
     min-height: 210px;
-    margin: 2rem 0;
+    margin: 5rem 0;
     align-items: center;
 
     .panel-info {
@@ -360,7 +360,7 @@ main.comTestes {
   }
   .cards-testes {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(220px, 245px));
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px;
 
     .teste {
@@ -371,6 +371,7 @@ main.comTestes {
       margin-bottom: 20px;
       // border-radius: 10px;
       // max-width: 250px;
+      min-width: 240px;
       box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.25);
       position: relative;
       min-height: 230px;
@@ -746,16 +747,19 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
         .btn-action {
           display: flex;
           justify-content: flex-end;
+
+          button, a  {
+            background: none;
+            color: var(--color-black);
+            padding: 8px 15px;
+            border-radius: 50px;
+            margin-right: 10px;
+            font-size: 15px;
+            cursor: pointer;
+          }
         }
 
-        button {
-          background: none;
-          padding: 8px 15px;
-          border-radius: 50px;
-          margin-right: 10px;
-          font-size: 15px;
-          cursor: pointer;
-        }
+       
       }
     }
 
