Ajustando banner landing

--- a/Public/CSS/sass/partials/_sectionsTester.scss
+++ b/Public/CSS/sass/partials/_sectionsTester.scss
@@ -1,6 +1,6 @@
 #headerTester {
-  background: url(../../../Imagens/bgTester.svg);
-  background-size: cover;
+  background: url(../../../Imagens/bgTester.svg) no-repeat center center/cover;;
+  // background-size: cover;
   padding-bottom: 8rem;
 }
 
