--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -739,8 +739,7 @@ header#logoLogin img {
 }
 
 #headerTester {
-  background: url(../../../Imagens/bgTester.svg);
-  background-size: cover;
+  background: url(../../../Imagens/bgTester.svg) no-repeat center center/cover;
   padding-bottom: 8rem;
 }
 
