--- a/Views/Partials/_testes.hbs
+++ b/Views/Partials/_testes.hbs
@@ -10,11 +10,11 @@
         {{#each testes}}
         <div class="teste">
            
-                <div>
+                <img src="/Imagens/web.png" alt="Ícone para ver testes" aria-hidden="true">
                     <h2>{{nome}}</h2>
-                    <p>Teste sobre a página inicial do site Lorem {{{teste.descricao}}}</p>
+                    {{!-- <p>Teste sobre a página inicial do site Lorem {{{teste.descricao}}}</p> --}}
                     <a href="/testes/{{_id}}" class="btn-outline">Ver mais detalhes do teste</a>
-                </div>
+                
             
         </div>
         {{/each}}
