--- a/Views/Testes/add.hbs
+++ b/Views/Testes/add.hbs
@@ -21,7 +21,7 @@
             <button class="menutoggle" aria-expanded="false">Menu</button>
             <h1>Novo teste</h1>
             <div class="utilities">
-                <span class="user">Olá {{user}}!</span>
+                <span class="user">Olá  {{nome}}!</span>
                 <a tabindex="0" class="logout" href="/users/logout">Sair</a>
             </div>
         </header>
