--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -374,14 +374,15 @@ main.comTestes {
       min-width: 240px;
       box-shadow: 0px 4px 10px rgba(157, 155, 155, 0.25);
       position: relative;
-      min-height: 230px;
+      min-height: 250px;
       padding: 20px;
+      justify-content: center;
+      text-align: center;
 
       h2 {
-        font-size: 20px;
+        font-size: 24px;
         color: var(--color-blue);
-        margin: 10px 0 20px;
-        text-align: left;
+        margin: 0px 0 20px;
       }
 
       p {
@@ -390,17 +391,32 @@ main.comTestes {
         color: var(--color-black);
       }
 
+      img {
+        width: 65px;
+    height: auto;
+    margin: -40px auto 0 auto;
+      }
+
       .btn-outline {
-        position: absolute;
-        bottom: 20px;
-        left: 20px;
-        display: inline-block;
-        color: var(--color-blue);
-        border: 2px solid var(--color-blue);
-        font-size: 14px;
-        padding: 0.8rem 1rem;
-        font-weight: 500;
-        border-radius: 3em;
+          /* position: absolute; */
+    /* bottom: 20px; */
+    /* left: 20px; */
+    display: table;
+    margin: 0 auto;
+    color: var(--color-blue);
+    border: 3px solid var(--color-blue);
+    /* font-size: 14px; */
+    padding: 0.8rem 15px;
+    font-weight: 500;
+    border-radius: 3em;
+    transition: 0.5s;
+
+    &:hover {
+      // background: #f1f1f1;
+      box-shadow: 0 10px 10px rgba(0, 102, 147, 0.09);
+      transition: box-shadow 0.3s ease;
+      // transition: 0.2s;
+    }
       }
     }
   }
