--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -404,9 +404,9 @@ main.comTestes {
     display: table;
     margin: 0 auto;
     color: var(--color-blue);
-    border: 3px solid var(--color-blue);
-    /* font-size: 14px; */
-    padding: 0.8rem 15px;
+    border: 2px solid var(--color-blue);
+   font-size: 15px;
+    padding: 0.8rem 10px;
     font-weight: 500;
     border-radius: 3em;
     transition: 0.5s;
