--- a/Public/CSS/theme.css
+++ b/Public/CSS/theme.css
@@ -1368,9 +1368,9 @@ main.comTestes .cards-testes .teste .btn-outline {
   display: table;
   margin: 0 auto;
   color: var(--color-blue);
-  border: 3px solid var(--color-blue);
-  /* font-size: 14px; */
-  padding: 0.8rem 15px;
+  border: 2px solid var(--color-blue);
+  font-size: 15px;
+  padding: 0.8rem 10px;
   font-weight: 500;
   border-radius: 3em;
   -webkit-transition: 0.5s;
