--- a/Public/CSS/sass/partials/_sidebarDashboard.scss
+++ b/Public/CSS/sass/partials/_sidebarDashboard.scss
@@ -50,8 +50,6 @@ $width-sidenav: 210px;
   }
 }
 
-
-
 // header dashboard
 .headerDashboard {
   grid-area: header;
@@ -217,7 +215,6 @@ $width-sidenav: 210px;
   font-size: 16px;
   border-radius: 0.25rem;
   margin: 10px 25px 0;
-
 
   .breadcrumb-item + .breadcrumb-item::before {
     display: inline-block;
@@ -393,30 +390,30 @@ main.comTestes {
 
       img {
         width: 65px;
-    height: auto;
-    margin: -40px auto 0 auto;
+        height: auto;
+        margin: -40px auto 0 auto;
       }
 
       .btn-outline {
-          /* position: absolute; */
-    /* bottom: 20px; */
-    /* left: 20px; */
-    display: table;
-    margin: 0 auto;
-    color: var(--color-blue);
-    border: 2px solid var(--color-blue);
-   font-size: 15px;
-    padding: 0.8rem 10px;
-    font-weight: 500;
-    border-radius: 3em;
-    transition: 0.5s;
+        /* position: absolute; */
+        /* bottom: 20px; */
+        /* left: 20px; */
+        display: table;
+        margin: 0 auto;
+        color: var(--color-blue);
+        border: 2px solid var(--color-blue);
+        font-size: 15px;
+        padding: 0.8rem 10px;
+        font-weight: 500;
+        border-radius: 3em;
+        transition: 0.5s;
 
-    &:hover {
-      // background: #f1f1f1;
-      box-shadow: 0 10px 10px rgba(0, 102, 147, 0.09);
-      transition: box-shadow 0.3s ease;
-      // transition: 0.2s;
-    }
+        &:hover {
+          // background: #f1f1f1;
+          box-shadow: 0 10px 10px rgba(0, 102, 147, 0.09);
+          transition: box-shadow 0.3s ease;
+          // transition: 0.2s;
+        }
       }
     }
   }
@@ -764,7 +761,8 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
           display: flex;
           justify-content: flex-end;
 
-          button, a  {
+          button,
+          a {
             background: none;
             color: var(--color-black);
             padding: 8px 15px;
@@ -774,8 +772,6 @@ svg.svg-inline--fa.fa-video.fa-w-18 {
             cursor: pointer;
           }
         }
-
-       
       }
     }
 
