--- a/Public/CSS/sass/theme.scss
+++ b/Public/CSS/sass/theme.scss
@@ -13,5 +13,8 @@
 @import "partials/videoGrid";
 @import "partials/addTesteFinalizado";
 @import "partials/convidarTesters";
+@import "partials/dashboardTester";
 @import "partials/contato";
 @import "partials/mediasqueries";
+
+
