--- a/Views/homepage.hbs
+++ b/Views/homepage.hbs
@@ -55,7 +55,7 @@
                 <p>Teste remotos com feedbacks em tempo real.</p>
                 <a class="btn-cta" href="/users/register">Quero testar meu site</a>
             </div>
-            <img data-aos="fade-up" src="Imagens/bannerHome.svg"
+            <img src="Imagens/bannerHome.svg"
                 alt="Homem de óculos escuros utilizando um notebook. Balão de fala: 'Como faço para concluir este formulário?'">
         </div>
     </div>
