--- a/Public/CSS/sass/partials/_general.scss
+++ b/Public/CSS/sass/partials/_general.scss
@@ -15,8 +15,7 @@ body {
   font-family: "museo-sans", sans-serif;
   color: var(--color-black);
   font-size: 1.6rem;
-  transition: 0.3s;
-
+  overflow-x: hidden;
 }
 
 button {
@@ -96,7 +95,7 @@ h2 {
 }
 
 
-.skip-links a {
+.skip-links a, .skip-links button {
   position: absolute;
   top: -3rem;
   background: var(--color-white);
@@ -112,6 +111,9 @@ h2 {
     text-align: center;
     background: var(--color-blue);
     color: white;
+    width: 100%;
+    font-size: 16px;
+    border: 0;
     // left: 5rem;
     position: relative;
     // margin: 12rem 0;
