--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
     <link rel="stylesheet" href="/CSS/theme.css">
     <script src="https://kit.fontawesome.com/9d7bb7e31a.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
@@ -15,8 +15,18 @@
 
 
 <body>
-
-    {{> _skip_links}}
+    {{#if tester}}
+    {{!-- skip links --}}
+    <ul class="skip-links">
+        <li><a href="#menu">Pular para menu</a></li>
+        <li> <a href="{{teste.url}}" target="_blank">Abrir URL para testar (em outra aba)</a></li>
+        <li>
+            <button class="hoverButton share-button" onclick="{swap()}">
+                Compartilhar tela
+            </button></li>
+        <li><a href="#rodape">Pular para rodapé</a></li>
+    </ul>
+    {{!-- / skip links --}}
     <div id="dashboard">
 
         <!-- header -->
@@ -24,20 +34,49 @@
             <button class="menutoggle" aria-expanded="false">Menu</button>
             <h1>Videochamada</h1>
             <div class="utilities">
-                <span class="user">Olá  {{user}}!</span>
                 <a tabindex="0" class="logout" href="/users/logout">Sair</a>
             </div>
         </header>
         <!-- /header -->
-        {{> _sidebar}}
+        <!-- aside -->
+        <aside class="sidenav">
+            <button class="close">Fechar</button>
+            <div class="logo">
+                <a href="/"><img src="/Imagens/logo-ally.svg" alt="Logo do Ally"></a>
+            </div>
+
+            <nav id="menu" class="main-nav" aria-label="Navegação principal">
+                <ul class="navList">
+                    <li class="item">
+                        <a href="/dashboard"> <img src="/Imagens/IconeTestes.svg" alt="Ícone para ver testes"
+                                aria-hidden="true">Dashboard</a>
+                    </li>
+                    <li class="item">
+                        <a href="/orientacoes"> <img src="/Imagens/IconeOrientacao.svg" alt="Ícone para ver Orientações"
+                                aria-hidden="true">Orientações</a>
+                    </li>
+                    <li class="item">
+                        <a href="/calendario"> <img src="/Imagens/IconeCalendario.svg" alt="Ícone para ver Calendário"
+                                aria-hidden="true">Agenda</a>
+                    </li>
+                    <li class="item">
+                        <a href="/configuracoes"> <img src="/Imagens/IconeConfiguracao.svg"
+                                alt="Ícone para ver Configurações" aria-hidden="true">Configurações</a>
+                    </li>
+
+                </ul>
+            </nav>
+        </aside>
+        <!-- / aside -->
+
 
         <main id="conteudo">
             <!-- breadcrumbs -->
             <nav aria-label="breadcrumb">
                 <ol class="breadcrumb">
-                    <li class="breadcrumb-item"><a href="/">Testes </a>
+                    <li class="breadcrumb-item"><a href="/">Dashboard </a>
                     </li>
-                    <li class="breadcrumb-item"><a href="/testes/{{teste._id}}">{{teste.nome}} </a>
+                    <li class="breadcrumb-item"><a href="/testes/{{teste._id}}/info">Informações</a>
                     </li>
                     <li class="breadcrumb-item active" aria-current="page">Videochamada</li>
                 </ol>
@@ -77,71 +116,144 @@
                     </div>
                 </div>
                 <div id="anotacoes">
-                    {{#if tester}}
                     <div id="testerArea">
-                            <div class="todasAnotacoesHead">
+                        <div class="todasAnotacoesHead">
                             <figure class="anotationIcon">
                                 <img src="/Imagens/noteicon.svg" alt="Icone de anotação" aria-hidden="true">
                             </figure>
                             <h2>Informações</h2>
                         </div>
                         <div>
-                            <ul>
-                                <li>Site URL: <a href="teste.url">{{teste.url}}</a></li>
-                                <li>Quando a tela foi compartilhada sua tela começara a ser gravada automaticamente</li>
-                            </ul>
-                        </div>
-                    </div>
-                {{else}}
-                 <div id="todasAnotacoes">
-                        <div class="todasAnotacoesHead">
-                            <div role="button" aria-pressed="true" tabindex="0" class="btnDivAnotacao">
-                                Anotações
-                            </div>
-                            <div role="button" aria-pressed="false" tabindex="0" class="btnDivRoteiro">
-                                Tarefas
-                            </div>
-                        </div>
-                        <div id="wrapper">
-                            <ul role="listbox">
 
-                            </ul>
-                        </div>
-                        <div id="tarefasWrapper">
-                            <ul>
-                                {{#each teste.tarefas as |tarefa index|}}
-                                    <li>Tarefa {{indexNum index}}: {{tarefa}}</li>
-                                {{/each}}
-                            </ul>
+                            <p class="url">Site URL: <a href="teste.url" target="_blank">{{teste.url}}</a>
+
                         </div>
                     </div>
-                    <form>
-                        <input type="text" autocomplete="off" name="anotacao" placeholder="Escreva suas anotações...">
-                        <input type="submit" class="btnanotacao" value="Salvar Anotação">
-                    </form>
+
                 </div>
             </div>
-                
-                {{/if}}
 
         </main>
 
-        <!-- footer -->
-        <footer id="rodape" class="footerDashboard">
-            <p><span class="footer__copyright">&copy;</span> Ally 2020</p>
-            <a href="/contato">Entre em contato</a>
-        </footer>
-        <!-- / footer -->
-
-    </div>
 
 
+        {{else}}
+        {{> _skip_links}}
+
+        <div id="dashboard">
+            <!-- header -->
+            <header class="headerDashboard">
+                <button class="menutoggle" aria-expanded="false">Menu</button>
+                <h1>Videochamada</h1>
+                <div class="utilities">
+                    <span class="user">Olá {{user}}!</span>
+                    <a tabindex="0" class="logout" href="/users/logout">Sair</a>
+                </div>
+            </header>
+            <!-- /header -->
 
 
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
-    <script src="https://cdn.rawgit.com/muaz-khan/DetectRTC/master/DetectRTC.js" defer></script>
-    <script src="/socket.io/socket.io.js" defer></script>
-    <script src="/Javascript/chamadas.js" defer></script>
-    <script src="/Javascript/mandarAnotacao.js" defer></script>
-    <script src="/Javascript/mobileDashboard.js"></script>
+           
+            {{> _sidebar}}
+
+
+            <main id="conteudo">
+                <!-- breadcrumbs -->
+                <nav aria-label="breadcrumb">
+                    <ol class="breadcrumb">
+                        <li class="breadcrumb-item"><a href="/">Testes </a>
+                        </li>
+                        <li class="breadcrumb-item"><a href="/testes/{{teste._id}}">{{teste.nome}} </a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">Videochamada</li>
+                    </ol>
+                </nav>
+                <!-- / breadcrumbs -->
+
+                <div id="sala">
+                    <div class="videoContainer">
+                        <p id="remote-video-text"></p>
+                        <div id="remoteContainer">
+                            <video id="remote-video" autoplay playsinline></video>
+                        </div>
+                        <div id="moveable">
+                            <video id="local-video" autoplay muted playsinline></video>
+                        </div>
+                        <div class="buttonsAll">
+                            <div class="buttonContainer">
+                                <button class="hoverButton" onclick="{muteMicrophone()}">
+                                    <span id="mic-icon" class="fas fa-microphone fa-xs"></span>
+                                </button>
+                                <div class="HoverState" id="mic-text">Mutar</div>
+                            </div>
+                            <div class="buttonContainer">
+                                <button class="hoverButton" id="share-button" onclick="{swap()}">
+                                    <span id="swap-icon" class="fas fa-desktop fa-xs"></span>
+                                </button>
+                                <div class="HoverState" id="swap-text">Compartilhar Tela (quando clicado sua tela
+                                    começará a ser
+                                    gravada)</div>
+                            </div>
+                            <div class="buttonContainer">
+                                <button class="hoverButton" onclick="{window.location.href = '/dashboard'}">
+                                    <span class="fas fa-phone-slash fa-xs"></span>
+                                </button>
+                                <div class="HoverState">Terminar Chamada</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div id="anotacoes">
+
+                        <div id="todasAnotacoes">
+                            <div class="todasAnotacoesHead">
+                                <div role="button" aria-pressed="true" tabindex="0" class="btnDivAnotacao">
+                                    Anotações
+                                </div>
+                                <div role="button" aria-pressed="false" tabindex="0" class="btnDivRoteiro">
+                                    Tarefas
+                                </div>
+                            </div>
+                            <div id="wrapper">
+                                <ul role="listbox">
+
+                                </ul>
+                            </div>
+                            <div id="tarefasWrapper">
+                                <ul>
+                                    {{#each teste.tarefas as |tarefa index|}}
+                                    <li>Tarefa {{indexNum index}}: {{tarefa}}</li>
+                                    {{/each}}
+                                </ul>
+                            </div>
+                        </div>
+                        <form>
+                            <input type="text" autocomplete="off" name="anotacao"
+                                placeholder="Escreva suas anotações...">
+                            <input type="submit" class="btnanotacao" value="Salvar Anotação">
+                        </form>
+                    </div>
+                </div>
+
+
+            </main>
+            {{/if}}
+
+            <!-- footer -->
+            <footer id="rodape" class="footerDashboard">
+                <p><span class="footer__copyright">&copy;</span> Ally 2020</p>
+                <a href="/contato">Entre em contato</a>
+            </footer>
+            <!-- / footer -->
+
+        </div>
+
+
+
+
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous" defer></script>
+        <script src="https://cdn.rawgit.com/muaz-khan/DetectRTC/master/DetectRTC.js" defer></script>
+        <script src="/socket.io/socket.io.js" defer></script>
+        <script src="/Javascript/chamadas.js" defer></script>
+        <script src="/Javascript/mandarAnotacao.js" defer></script>
+        <script src="/Javascript/mobileDashboard.js"></script>
