--- a/Views/Partials/_convites.hbs
+++ b/Views/Partials/_convites.hbs
@@ -11,7 +11,7 @@
                 <a href="/dashboard"> <img src="/Imagens/IconeTestes.svg" alt="Ícone para ver testes"
                         aria-hidden="true">Dashboard</a>
             </li>
-             <li class="item">
+            <li class="item">
                 <a href="/orientacoes"> <img src="/Imagens/IconeOrientacao.svg" alt="Ícone para ver Orientações"
                         aria-hidden="true">Orientações</a>
             </li>
@@ -42,70 +42,63 @@
 
 {{#if convites}}
 
-<main id="conteudo" class="semConvites">
+<main id="conteudo" class="comConvites">
     <section class="dashboardTester">
         <div class="info">
             <h2>Olá {{nome}}!</h2>
-            <p>Aqui é o espaço onde as empresas irão te convidar para realizar os testes. Assim que o convite for
+            <p>Aqui é o espaço onde as empresas irão te convidar para realizar os testes. <br>Assim que o convite for
                 enviado,
                 aparecerá a solicitação.</p>
         </div>
-       <div class="convites">
-    <h3>Convites</h3>
+        <div class="convites">
+            <h3>Convites</h3>
 
-    <table class="striped">
-        <caption class="sr-only">Convites Recebidos</caption>
-        <thead>
-            <tr>
-                <th>Nome</th>
-                <th>&nbsp;</th>
+            <table class="striped">
+                <caption class="sr-only">Convites Recebidos</caption>
+                <thead>
+                    <tr>
+                        <th>Nome do teste</th>
+                        <th>Data</th>
+                        <th>Hora</th>
+                        <th class="sr-only">Ações</th>
 
-            </tr>
-        </thead>
-        <tbody>
+                    </tr>
+                </thead>
+                <tbody>
 
-            {{#each convites as |convite|}}
-            <tr>
-                <td>{{convite.userNome}}</td>
-                <td class="btn-action">
-                    {{!-- <button
+                    {{#each convites as |convite|}}
+                    <tr>
+                        <td>{{convite.testeNome}}Teste Thais</td>
+                        <td>17/11/2020</td>
+                        <td>17:50</td>
+                        <td class="btn-action">
+                            {{!-- <button
                         onclick="aceitarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
                         class="blue">
                         Aceitar
                     </button> --}}
-                    <a class="blue" href="/testes/{{convite.testeId}}/info">Aceitar</a>
-                    <button
-                        onclick="recusarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
-                        id="recusarBtn" class="red">
-                        Recusar
-                    </button>
-                </td>
-            </tr>
-            {{/each}}
+                            <a class="blue" title="Abrir outra página com informações do teste"
+                                href="/testes/{{convite.testeId}}/info">Aceitar</a>
+                            <button
+                                onclick="recusarConvite('{{convite.userNome}}','{{convite.userId}}','{{convite.testeNome}}','{{convite.testeId}}')"
+                                id="recusarBtn" class="red">
+                                Recusar
+                            </button>
+                        </td>
+                    </tr>
+                    {{/each}}
 
-    </table>
-
-
-
-
-
-</div>
+            </table>
+        </div>
 
 
     </section>
 
-    {{!-- <section class="testes"> --}}
-
-    {{!-- <div class="testes-realizados">
-            <h3>Testes realizados</h3>
-            <p>Não há testes realizados.</p>
-        </div> --}}
-    {{!-- </section> --}}
 </main>
 
 
 
-
+{{!-- sem convites --}}
 {{else}}
 
 <main id="conteudo" class="semConvites">
@@ -122,16 +115,13 @@
         </div>
 
     </section>
-
-    {{!-- <section class="testes"> --}}
-
-    {{!-- <div class="testes-realizados">
-            <h3>Testes realizados</h3>
-            <p>Não há testes realizados.</p>
-        </div> --}}
-    {{!-- </section> --}}
 </main>
 {{/if}}
+
+{{!-- sem convites --}}
+
+
+
 
 {{!-- {{#if testesAceitos}}
 
@@ -160,5 +150,5 @@
 </div>
 
 
-{{/if}} --}}
+{{!-- {{/if}} --}} --}}
 <script src="/Javascript/convite.js"></script>
