--- a/Views/contato.hbs
+++ b/Views/contato.hbs
@@ -1,3 +1,17 @@
+<!DOCTYPE html>
+<html lang="pt">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="shortcut icon" type="image/x-icon" href="/Imagens/favicon.ico">
+    <link rel="stylesheet" href="/CSS/theme.css">
+    <title>Contato</title>
+</head>
+
+
+<body>
 {{!-- skip links --}}
 <ul class="skip-links">
     <li><a href="#menu">Pular para menu</a></li>
