Correção de Bugs

--- a/Views/Chamadas/sala.hbs
+++ b/Views/Chamadas/sala.hbs
@@ -125,7 +125,23 @@
                         </div>
                         <div>
 
-                            <p class="url">Site URL: <a href="teste.url" target="_blank">{{teste.url}}</a>
+                            <p class="url">Site URL: <a href="{{
+                                
+
+
+
+
+
+
+
+
+
+
+
+
+
+                                
+                            }}" target="_blank">{{teste.url}}</a>
 
                         </div>
                     </div>
